--- a/views/potting_lot_views.xml
+++ b/views/potting_lot_views.xml
@@ -66,7 +66,7 @@
                     <div class="oe_title">
                         <label for="name" string="Numéro de lot"/>
                         <h1>
-                            <field name="name" class="text-primary"/>
+                            <field name="name" class="text-primary" readonly="1"/>
                         </h1>
                     </div>
                     <group>
